--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
   h1= title
-  if user
-    p Hello, #{user.username}
-    a(href="/logout") Logout
-  else
-    a(href="/login") Login
+  p Welcome to #{title}
+  div
+    if user
+      a(href="/logout") #{user.username} をログアウト
+    else
+      a(href="/login") ログイン
