--- a/views/copy.pug
+++ b/views/copy.pug
@@ -1,27 +1,21 @@
 extends layout
 
 block content
-  div.card.my-3
-    div.card-header
-      h4 #{title.titleName}
-    div.card-body
-      p(style="white-space:pre;") #{title.memo}
-    div.card-footer
-      p 作成者: #{title.user.username}
-  div.form-group
-    label(for="shareURL") 共有用 URL:
-    - var herokuURL = process.env.HEROKU_URL ? process.env.HEROKU_URL : 'http://localhost:8000/'
-    input(type="text" value=`${herokuURL}titles/${title.titleId}/`)#shareURL.form-control      
+  h4 #{title.titleName}
+  p(style="white-space:pre;") #{title.memo}
+  p 作成者: #{title.user.username}
   - var isMine = parseInt(user.id) === parseInt(title.user.userId)
   //なぜ表示されないか
   //なぜ保存したuserIdと閲覧しているUserIdが違うのか
   //p #{title.user.userId}
   //p #{parseInt(user.id)}
   if isMine
-  h3.my-3 戦略・予想にボタンで答えてね
-  table.table.table-bordered
+    div
+      a(href=`/titles/${title.titleId}/edit`) 編集する
+  h3 皆様の返答
+  table
     tr
-      th 戦略・予想
+      th 戦略
       each user in users
         th #{user.username}
     each strategy in strategies
@@ -30,10 +24,9 @@ block content
         each user in users
           - var aruaru = aruaruMapMap.get(user.userId).get(strategy.strategyId)
           - var aruaruLabels = ['？？？？', 'あるある', 'ないない'];
-          - var buttonStyles = ['btn-secondary', 'btn-success', 'btn-danger'];
           td
             if user.isSelf
-              button(class=`aruaru-toggle-button btn-lg ${buttonStyles[aruaru]}`
+              button(
                 data-title-id=title.titleId
                 data-user-id=user.userId
                 data-strategy-id=strategy.strategyId
@@ -41,20 +34,14 @@ block content
             else
               p #{aruaruLabels[aruaru]}
     tr
-      th コメント
+      th 結果
       each user in users
         if user.isSelf
           td
             p#self-comment #{commentMap.get(user.userId)}
             button(
               data-title-id=title.titleId
-              data-user-id=user.userId)#self-comment-button.btn-xs.btn-info コメントする
+              data-user-id=user.userId)#self-comment-button 書き込み
         else
           td
             p #{commentMap.get(user.userId)}
-  div
-    a(href=`/titles/${title.titleId}/edit`).btn.btn-info 編集する
-    p
-  div
-    a(href=`/`).btn.btn-outline-primary 一覧に戻る
-    p
