--- a/views/new.pug
+++ b/views/new.pug
@@ -1,14 +1,15 @@
 extends layout
 
 block content
-  form(method="post", action="/titles")
-    div
-      h5 レースタイトル
-      input(type="text" name="titleName")
-    div
-      h5 メモ
-      textarea(name="memo")
-    div
-      h5 戦略・予想(改行して複数入力してください)
-      textarea(name="strategies")
-    button(type="submit") レース予想を作る
+  form(method="post", action="/titles").my-3
+    input(type="hidden" name="_csrf" value!=csrfToken)
+    div.form-group
+      label(for="titleName") レースタイトル
+      input(type="text" name="titleName" placeholder="タイトル入力")#titleName.form-control
+    div.form-group
+      label(for="memo") メモ
+      textarea(name="memo")#memo.form-control
+    div.form-group
+      label(for="stragegies") 戦略・予想
+      textarea(name="strategies" rows="6" placeholder="改行ごとに予想が作られます")#strategies.form-control
+    button(type="submit").btn.btn-info レース予想を作る
