--- a/views/title.pug
+++ b/views/title.pug
@@ -5,7 +5,7 @@ block content
     div.card-header
       h4 #{title.titleName}
     div.card-body
-      p(style="white-space:pre;" class="card-text") #{title.memo}
+      p.card-text(style="white-space:pre;") #{title.memo}
     div.card-footer
       p 作成者: #{title.user.username}
   div.form-group
