--- a/views/title.pug
+++ b/views/title.pug
@@ -5,7 +5,7 @@ block content
     div.card-header
       h4 #{title.titleName}
     div.card-body
-      p.card-text(style="white-space:pre;") #{title.memo}
+      p(class="card-text" style="white-space:pre;") #{title.memo}
     div.card-footer
       p 作成者: #{title.user.username}
   div.form-group
@@ -18,6 +18,7 @@ block content
   //なぜ保存したuserId(作成者)と閲覧しているUserIdが違うのか
   //p #{title.user.userId}
   //p #{parseInt(user.id)}
+  //memoが長文でハミ出す
   div
     h6 ツイートする:
     a(href="https://twitter.com/intent/tweet?button_hashtag=舟券評議会&ref_src=twsrc%5Etfw" 
