--- a/views/edit.pug
+++ b/views/edit.pug
@@ -17,6 +17,9 @@ block content
           li.list-group-item #{strategy.strategyName}
       label(for="strategies").my-2 新規追加
       textarea(name="strategies" placeholder="追加分を入力してください")#strategies.form-control
+    div.form-group
+      label(for="result") 結果
+      input(type="text" name="result" value=title.result)#result.form-control
     div
       button(type="submit").btn.btn-info 以上の内容で編集する
   form(method="post", action=`/titles/${title.titleId}?delete=1`)
