アプリ説明変更

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,8 @@ extends layout
 block content
   div.jumbotron.my-3
     h1.display-4 舟券評議会
-    p.lead 舟券評議会はボートレース予想をワイワイ楽しむのが目的です
+    p.lead 舟券評議会はボートレース予想を保存できるサービスです。
+    p.lead 予想詳細ページのURLを報せれば、予想に答えてくれるかも。
     h6 Twitter認証を利用しています
   if user
     div
