--- a/views/title.pug
+++ b/views/title.pug
@@ -25,7 +25,7 @@ block content
     class="twitter-hashtag-button" 
     data-text=`${herokuURL}titles/${title.titleId}/`)
     script(src="https://platform.twitter.com/widgets.js" charset="utf-8")
-  h3.my-3 戦略・予想にボタンで答えてね
+  h4.my-3 来訪者は戦略・予想にボタンで答えることができます
   table.table.table-bordered
     tr
       th 戦略・予想
